--- a/src/components/Clients/Clients.module.css
+++ b/src/components/Clients/Clients.module.css
@@ -33,7 +33,7 @@
   text-align: center;
 
   font-size: 2rem;
-  background-color: olive;
+  /* background-color: olive; */
   color: white;
   font-weight: 700;
 
@@ -48,7 +48,7 @@
 }
 .client img {
   max-width: 80%;
-  max-height: 5rem;
+  /* max-height: 10rem; */
   height: auto;
 }
 
