Add Clients compoennt layout

--- a/src/components/Clients/Clients.module.css
+++ b/src/components/Clients/Clients.module.css
@@ -23,7 +23,7 @@
 
   margin: 4.5rem auto;
   max-width: 70%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .client {
   width: 17rem;
