--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -4,16 +4,18 @@
   justify-content: center;
   flex-direction: column;
 
-  background-color: aliceblue;
-  /* gap: 10rem; */
+  background-color: var(--lightblue);
+
+  padding: 5rem 0;
 }
 .about__description {
+  text-transform: capitalize;
+  text-align: center;
 }
 .about__heading {
   font-size: 7rem;
 }
 .about__headText {
-  /* font-family: Sora; */
   font-weight: 400;
   font-size: 2rem;
   line-height: 3.2rem;
@@ -36,25 +38,51 @@
   flex-direction: column;
   gap: 1rem;
 
+  position: relative;
+
   width: 40rem;
-  height: 28rem;
+  min-height: 28rem;
 
   border-radius: 16px;
-  border: 1px solid #ccd2e980;
+  border: 1px solid var(--orange);
 
   padding: 3.2rem;
 
   transition: 0.4s;
 }
+
+.about__icon {
+  font-size: 4rem;
+  max-width: 4rem;
+  position: absolute;
+  right: 1.2rem;
+  top: 1.2rem;
+}
+.about__icon path {
+  /* fill: var(--orange); */
+  transition: 0.3s;
+}
+
 .about__square:hover {
   background-color: white;
   box-shadow: 0.3rem 0.3rem 0.5rem lightgrey;
+  border: 1px solid #ccd2e980;
 }
+.about__square:hover > .about__square__heading {
+  color: var(--orange);
+}
+.about__square:hover > .about__icon path {
+  fill: var(--orange);
+}
+
 .about__square__heading {
+  text-transform: uppercase;
+
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
   letter-spacing: -2%;
+  transition: 0.2s;
 }
 .about__square__description {
   font-weight: 400;
@@ -76,7 +104,7 @@
   opacity: 1;
 
   margin: 3rem;
-  background-color: #0059f7;
+  background-color: var(--slate-blue);
 }
 .about__contact h5 {
   font-weight: 500;
@@ -113,4 +141,8 @@
   line-height: 24px;
   letter-spacing: 0%;
   background-color: rgba(255, 255, 255, 0.4);
+}
+
+.about__contact:hover > .about__contact button {
+  color: var(--orange);
 }
