--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -15,20 +15,23 @@
   margin: 12.5rem 0 12.5rem 0;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   height: 100%;
 }
 .contact__info {
-  gap: 8rem;
+  gap: 4rem;
   flex-basis: 40%;
 }
 .contact__heading {
+  margin-left: -3.2rem;
   font-size: 6rem;
+  text-align: left;
 }
 .contact__description {
   width: 70%;
   font-size: 1.7rem;
+  text-align: left;
 }
 
 .contact__form {
@@ -46,12 +49,11 @@
 }
 .contact__form input:focus,
 .contact__form textarea:focus {
-  border-color: #4a90e2;
+  border-color: var(--slate-blue);
   box-shadow: 0 0 8px rgba(74, 144, 226, 0.2);
 }
 .contact__name,
 .contact__email {
-  /* width: 80%; */
   flex-grow: 1;
 }
 
@@ -67,17 +69,17 @@
 }
 
 .contact__submit {
-  background-color: #4a90e2;
-  color: white;
+  background-color: var(--lightblue);
+  color: var(--dark);
   padding: 12px;
-  border: none;
   border-radius: 8px;
   font-weight: 600;
   cursor: pointer;
-  transition: background 0.3s ease, transform 0.1s ease;
+  transition: all 0.3s ease, transform 0.1s ease;
 }
 .contact__submit:hover {
-  background-color: #357abd;
+  color: var(--text);
+  background-color: var(--orange);
 }
 .contact__submit:active {
   transform: scale(0.9);
