--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,14 +1,15 @@
 .navbar {
   background-color: var(--dark);
-  padding: 15px 0;
+  padding: 1.5rem 0;
   position: fixed;
   width: 100%;
+  max-width: 100vw;
   top: 0;
   z-index: 10;
   font-family: "Arial", sans-serif;
 }
 
-.container {
+.navbar__container {
   max-width: 98%;
   margin: 0 auto;
   display: flex;
@@ -74,13 +75,19 @@
   margin: 3px 0;
 }
 
-@media (max-width: 768px) {
-  .menu-toggle {
+@media (max-width: 78rem) {
+  .navbar {
+    padding: 1rem 0.5rem;
+  }
+  .navbar__container {
+    padding: 0;
+  }
+  .menu__toggle {
     display: flex;
   }
 
   .nav__links {
-    display: none; /* Hide for mobile dropdown logic */
+    display: none;
     flex-direction: column;
     position: absolute;
     top: 70px;
