--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -57,13 +57,12 @@
   flex-grow: 1;
 }
 
-.contact__subject {
+.contact__subject,
+.contact__message {
   width: 80%;
 }
 
 .contact__message {
-  width: 80%;
-
   min-height: 120px;
   resize: vertical;
 }
@@ -92,4 +91,30 @@
   justify-content: center;
   gap: 2rem;
   width: 80%;
+}
+
+@media (max-width: 78rem) {
+  .contact {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .contact__info,
+  .contact__form {
+    margin: 4rem 0;
+    width: 90%;
+  }
+  .contact__form {
+    gap: 1.5rem;
+  }
+  .row {
+    flex-direction: column;
+    width: 100%;
+  }
+  .contact__name,
+  .contact__email,
+  .contact__subject,
+  .contact__message {
+    width: 90%;
+  }
 }
