--- a/src/components/Clients/Clients.module.css
+++ b/src/components/Clients/Clients.module.css
@@ -1,82 +1,61 @@
-.clients {
-  padding: 6rem 0;
-  background-color: var(--dark);
+.clientsSection {
+  margin: 5rem 0;
 }
-.clients__heading {
-  margin-bottom: 4rem;
+.clientsSection h2 {
+  font-size: 5rem;
+  color: var(--dark);
   font-weight: 650;
-  font-size: 4.8rem;
-  line-height: 6.4rem;
-  letter-spacing: 0%;
-  color: var(--text);
   text-align: center;
 }
-.clients__description {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  text-align: center;
+.carousel {
+  margin: 10rem auto;
+  width: 100rem;
+  display: flex;
+  overflow-x: auto;
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
 }
-.clients__grid {
-  display: grid;
-  grid-template-columns: 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr;
-  grid-template-rows: repeat(8, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-
-  margin: 7.5rem auto;
-  max-width: 70%;
+.carousel::-webkit-scrollbar {
+  display: none;
 }
-.client {
-  width: 17rem;
-  height: 9.6rem;
-  border-radius: 16px;
-  align-content: center;
-  text-align: center;
 
-  font-size: 2rem;
-  color: white;
-  font-weight: 700;
-
+.carousel__group {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.2s;
-  cursor: pointer;
+  gap: 1rem;
+  animation: spin 13s infinite linear;
+  padding-right: 1rem;
+  border-top: 3px solid var(--orange);
+  border-bottom: 3px solid var(--orange);
 }
-.client:hover {
-  transform: scale(1.1);
-}
-.client img {
-  max-width: 80%;
-  height: auto;
+.carousel__card {
+  height: 30rem;
+
+  flex: 0 0 20rem;
+  padding: 1rem;
+  text-align: center;
+  align-content: center;
+  border-radius: 2rem;
 }
 
-.gy {
-  grid-area: 4 / 1 / 6 / 2;
-}
-.gy1 {
-  grid-area: 2 / 3 / 4 / 4;
-}
-.gy2 {
-  grid-area: 5 / 3 / 7 / 4;
-}
-.gy3 {
-  grid-area: 1 / 5 / 3 / 6;
-}
-.gy4 {
-  grid-area: 4 / 5 / 6 / 6;
-}
-.gy5 {
-  grid-area: 7 / 5 / 9 / 6;
-}
-.gy6 {
-  grid-area: 5 / 7 / 7 / 8;
-}
-.gy7 {
-  grid-area: 2 / 7 / 4 / 8;
-}
-.gy8 {
-  grid-area: 4 / 9 / 6 / 10;
+@keyframes spin {
+  from {
+    translate: 0;
+  }
+  to {
+    translate: -100%;
+  }
 }
