--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -124,14 +124,10 @@
   color: white;
 }
 .about__contact button {
-  width: 17rem;
   height: 6.4rem;
   border-radius: 8px;
   opacity: 1;
-  padding-top: 20px;
-  padding-right: 24px;
-  padding-bottom: 20px;
-  padding-left: 24px;
+
   gap: 1rem;
 
   color: white;
@@ -141,10 +137,18 @@
   line-height: 24px;
   letter-spacing: 0%;
   background-color: rgba(255, 255, 255, 0.4);
+  transition: 0.2s;
 }
 
-.about__contact:hover > .about__contact button {
-  color: var(--orange);
+.about__contact button:hover {
+  transform: scale(1.1);
+}
+.about__contact a {
+  padding: 2rem 2.4rem;
+  height: 100%;
+  width: 100%;
+  color: var(--text);
+  text-decoration: none;
 }
 
 @media (max-width: 78rem) {
