--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -4,15 +4,34 @@
   justify-content: center;
   flex-direction: column;
 
-  background-color: var(--lightblue);
-
+  background-image: url("../../assets/images/backman.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.about__overlay {
   padding: 5rem 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(7px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .about__description {
   text-transform: capitalize;
   text-align: center;
   margin: 5rem 0 10rem 0;
 }
+.about__headText,
+.about__heading {
+  color: var(--text);
+  font-weight: 700;
+}
+
 .about__heading {
   font-size: 7rem;
 }
@@ -48,10 +67,12 @@
 
   padding: 3.2rem;
 
-  background-color: white;
+  background-color: var(--slate-blue);
   transition: 0.2s;
   cursor: default;
   box-shadow: 0 0 1rem var(--dark);
+
+  color: var(--text);
 }
 
 .about__icon {
@@ -62,12 +83,10 @@
   top: 1.2rem;
 }
 .about__icon path {
+  fill: var(--text);
   transition: 0.3s;
 }
 
-.about__square:hover {
-  box-shadow: 0rem 0rem 0.2rem var(--orange);
-}
 .about__square:hover > .about__square__heading {
   color: var(--orange);
 }
@@ -90,79 +109,9 @@
   line-height: 24px;
   letter-spacing: -1%;
 }
-.about__contact {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: column;
-
-  width: 84rem;
-  height: 32rem;
-  top: 2645px;
-  left: 300px;
-  border-radius: 24px;
-  opacity: 1;
-
-  margin: 3rem;
-  background-color: var(--slate-blue);
-}
-.about__contact h5 {
-  font-weight: 500;
-  font-size: 2rem;
-  line-height: 3.2rem;
-  letter-spacing: 2%;
-  text-align: center;
-  text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.4);
-}
-.about__contact h4 {
-  font-weight: 600;
-  font-size: 3.6rem;
-  line-height: 4rem;
-  letter-spacing: -3%;
-  text-align: center;
-  color: white;
-}
-.about__contact button {
-  height: 6.4rem;
-  border-radius: 8px;
-  opacity: 1;
-
-  gap: 1rem;
-
-  color: white;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  background-color: rgba(255, 255, 255, 0.4);
-  transition: 0.2s;
-}
-
-.about__contact button:hover {
-  transform: scale(1.1);
-}
-.about__contact a {
-  padding: 2rem 2.4rem;
-  height: 100%;
-  width: 100%;
-  color: var(--text);
-  text-decoration: none;
-}
-
 @media (max-width: 78rem) {
   .about {
     padding: 20rem 0 10rem 0;
-  }
-  .about__contact {
-    width: 90%;
-  }
-  .about__contact h4 {
-    font-size: 3rem;
-  }
-  .about__contact h5 {
-    font-size: 1.7rem;
   }
 }
 
