--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -11,11 +11,11 @@
   background-attachment: fixed;
 }
 .about__overlay {
-  padding: 5rem 0;
+  padding: 10rem 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(7px);
+  /* backdrop-filter: blur(3px); */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -108,11 +108,6 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -1%;
-}
-@media (max-width: 78rem) {
-  .about {
-    padding: 20rem 0 10rem 0;
-  }
 }
 
 @media (max-width: 41rem) {
